# ruffle_libretro

./: .gitignore  Cargo.toml  build.rs
src/: backend.rs  core.rs  lib.rs  options.rs  retro.rs  util.rs
src/backend/: audio.rs  log.rs  navigator.rs  render.rs  storage.rs  ui.rs
src/backend/render/: gl.rs  opengl.rs  target.rs  vulkan.rs  wgpu.rs
src/backend/render/gl/shaders/: color.frag
src/backend/render/vulkan/: context.rs  global.rs  negotiation.rs  render_interface.rs  target.rs  util.rs
src/core/: config.rs  core.rs  input.rs  options.rs  render.rs  state.rs
src/core/render/: opengl.rs  vulkan.rs
src/retro/: hw_render.rs
src/util/: keyboard.rs  math.rs  mouse.rs
