[package]
name = "ruffle_libretro"
version = "0.0.0"
edition = "2021"
build = "build.rs"

[lib]
crate_type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arboard = "3.2.0"
ash = "0.37.1"
bytemuck = { version = "1.12.3", features = ["derive"] }
futures = "0.3.25"
gc-arena = { git = "https://github.com/kyren/gc-arena", rev = "318b2ea594dcdadd01f7789025e3b3940be96b2c" }
glow = "0.11.2"
isahc = "1.7.2"
libc = "0.2.139"
log = "0.4.17"
profiling = { version = "1.0", features = ["tracy-client"], optional = true }
ruffle_core = { git = "https://github.com/ruffle-rs/ruffle", features = ["audio", "default"] }
ruffle_render = { git = "https://github.com/ruffle-rs/ruffle", features = ["tessellator"] }
ruffle_video = { git = "https://github.com/ruffle-rs/ruffle" }
ruffle_video_software = { git = "https://github.com/ruffle-rs/ruffle" }
ruffle_render_wgpu = { git = "https://github.com/ruffle-rs/ruffle", features = ["render_debug_labels"] }
rust-libretro = { git = "https://github.com/max-m/rust-libretro", rev = "342acd1dc457493eebfd5a519316cd55a0a60a9f", features = ["vulkan", "unstable-env-commands", "strict-bitflags", "log"] }
rust-libretro-sys = { git = "https://github.com/max-m/rust-libretro", rev = "342acd1dc457493eebfd5a519316cd55a0a60a9f", features = ["vulkan"] }
tap = "1.0.1"
thiserror = "1.0.38"
url = "2.3.1"
webbrowser = "0.8.2"
wgpu = { git = "https://github.com/gfx-rs/wgpu", rev = "c5851275c59b1d5d949b142d6aa973d0bb638181", features = ["angle", "expose-ids"] }
wgpu-core = { git = "https://github.com/gfx-rs/wgpu", rev = "c5851275c59b1d5d949b142d6aa973d0bb638181" }
wgpu-hal = { git = "https://github.com/gfx-rs/wgpu", rev = "c5851275c59b1d5d949b142d6aa973d0bb638181", features = ["gles", "vulkan"] }
wgpu-types = { git = "https://github.com/gfx-rs/wgpu", rev = "c5851275c59b1d5d949b142d6aa973d0bb638181" }

[features]
default = []
profiler = ["profiling", "profiling/profile-with-tracy", "ruffle_render_wgpu/profile-with-tracy"]

[build-dependencies]
built = "0.5"